test/compile_errors/err_goto_undefined.w
//! expect-check-fail: undefined goto target 'missing

fn main:
    goto 'missing
